@@ -27,6 +27,11 @@ sync_nb_req = tape=5,dir=5
 # positive value, greater than 0 and lesser or equal than 2^54
 sync_wsize_kb = tape=1048576,dir=1048576
 
+# Fifo maximum number of concurrent write operation per grouping per scheduler,
+# positive value to limit concurrent writes, or 0 for no limit
+# (this parameter is only used by the fifo write schedulers)
+fifo_max_write_per_grouping = 0
+
 # I/O scheduling algorithms for dir family
 [io_sched_dir]
 # Scheduling algorithm used for read requests
