@@ -27,7 +27,8 @@ Source0: %{name}-%{version}.tar.gz
 %endif
 
 BuildRequires: %{postgres_prefix}-devel
-BuildRequires: glib2-devel >= 2.28
+# g_ptr_array_find needs glib2 2.54
+BuildRequires: glib2-devel >= 2.54
 BuildRequires: %{python_prefix}-devel
 BuildRequires: jansson-devel >= 2.5
 BuildRequires: libattr-devel
@@ -49,7 +50,7 @@ BuildRequires: python3-sphinx
 
 Requires: %{postgres_prefix}-server
 Requires: %{postgres_prefix}-contrib
-Requires: glib2 >= 2.28
+Requires: glib2 >= 2.54
 Requires: jansson
 Requires: libini_config
 Requires: openssl
@@ -82,7 +83,7 @@ in a SCSI library and local directories.
 Summary: C API for Phobos Object Store.
 
 Requires: phobos
-Requires: glib2-devel >= 2.28
+Requires: glib2-devel >= 2.54
 Requires: jansson-devel >= 2.5
 Requires: libattr-devel
 
@@ -201,6 +202,7 @@ ldconfig
 %endif
 
 %changelog
+
 * Tue May 27 2025 - Patrice Lucas <patrice.lucas@cea.fr> - 3.0.0-1
  - WARNING: the db schema moves from 2.2 to 3.0 and a migration is needed
  - WARNING: TLC section names in the configuration file are changed from
