@@ -25,7 +25,9 @@
 #include <glib.h>
 #include <pthread.h>
 #include <stdbool.h>
+#include <stdint.h>
 
+#include "lrs_cfg.h"
 #include "lrs_device.h"
 #include "lrs_sched.h"
 #include "pho_cfg.h"
@@ -141,20 +143,119 @@ static int fifo_requeue(struct io_scheduler *io_sched,
     return 0;
 }
 
-static int fifo_peek_request(struct io_scheduler *io_sched,
-                             struct req_container **reqc)
+static int max_write_per_grouping(void)
 {
-    struct queue_element *elem;
+    static int concurrent_write_per_grouping = -1;
 
-    elem = g_queue_peek_tail((GQueue *) io_sched->private_data);
+    if (concurrent_write_per_grouping == -1) {
+        concurrent_write_per_grouping =
+            PHO_CFG_GET_INT(cfg_lrs, PHO_CFG_LRS, fifo_max_write_per_grouping,
+                            0);
+        if (concurrent_write_per_grouping < 0) {
+            pho_error(-EINVAL,
+                      "fifo_max_write_per_grouping config value must be a null "
+                      "or positive integer. Instead we found %d",
+                      concurrent_write_per_grouping);
+            concurrent_write_per_grouping = -1;
+            return -EINVAL;
+        }
+    }
+
+    return concurrent_write_per_grouping;
+}
+
+static bool current_write_per_grouping_greater_than_max(GPtrArray *devices,
+                                                        const char *grouping,
+                                                        int max_grouping)
+{
+    GPtrArray *socket_id_array = g_ptr_array_new_full(max_grouping - 1, NULL);
+
+    int nb_write = 0;
+    int i;
+
+    for (i = 0; i < devices->len; i++) {
+        struct lrs_dev *dev;
+
+        dev = g_ptr_array_index(devices, i);
+        MUTEX_LOCK(&dev->ld_mutex);
+        if ((dev->ld_sub_request &&
+             pho_request_is_write(dev->ld_sub_request->reqc->req) &&
+             dev->ld_sub_request->reqc->req->walloc->grouping &&
+             !strcmp(dev->ld_sub_request->reqc->req->walloc->grouping,
+                     grouping) &&
+             !g_ptr_array_find(socket_id_array,
+                 (gconstpointer)(intptr_t) dev->ld_sub_request->reqc->socket_id,
+                 NULL)) ||
+            (dev->ld_ongoing_io && dev->ld_ongoing_grouping.grouping &&
+             !strcmp(dev->ld_ongoing_grouping.grouping, grouping) &&
+             !g_ptr_array_find(socket_id_array,
+                 (gconstpointer)(intptr_t) dev->ld_ongoing_grouping.socket_id,
+                 NULL))) {
+            nb_write++;
+            if (nb_write >= max_grouping) {
+                MUTEX_UNLOCK(&dev->ld_mutex);
+                g_ptr_array_unref(socket_id_array);
+                return true;
+            }
+
+            g_ptr_array_add(socket_id_array,
+                            (gpointer)(intptr_t) (dev->ld_sub_request ?
+                                dev->ld_sub_request->reqc->socket_id :
+                                dev->ld_ongoing_grouping.socket_id));
+        }
+
+        MUTEX_UNLOCK(&dev->ld_mutex);
+    }
+
+    g_ptr_array_unref(socket_id_array);
+    return false;
+}
+
+
+static int fifo_limited_grouping_peek_request(struct io_scheduler *io_sched,
+                                              struct req_container **reqc)
+{
+    GQueue *queue = (GQueue *) io_sched->private_data;
+    GQueue *requeued_elem = g_queue_new();
+    struct queue_element *elem;
+    int rc = 0;
+
+new_elem:
+    elem = g_queue_peek_tail(queue);
     if (!elem) {
         *reqc = NULL;
-        return 0;
+        goto requeue;
+    }
+
+    if (pho_request_is_write(elem->reqc->req) &&
+        elem->reqc->req->walloc->grouping) {
+        int cfg_max_write_per_grouping = max_write_per_grouping();
+
+        if (cfg_max_write_per_grouping < 0) {
+            rc = cfg_max_write_per_grouping;
+            goto requeue;
+        }
+
+        if (cfg_max_write_per_grouping > 0 &&
+            current_write_per_grouping_greater_than_max(io_sched->devices,
+                elem->reqc->req->walloc->grouping,
+                cfg_max_write_per_grouping)) {
+            g_queue_push_head(requeued_elem, g_queue_pop_tail(queue));
+            goto new_elem;
+        }
     }
 
     *reqc = elem->reqc;
 
-    return 0;
+requeue:
+    elem = g_queue_pop_tail(requeued_elem);
+    while (elem) {
+        g_queue_push_head(queue, elem);
+        elem = g_queue_pop_tail(requeued_elem);
+    }
+
+    g_queue_free(requeued_elem);
+    return rc;
 }
 
 /* find a device that can be allocated now */
@@ -622,7 +723,7 @@ struct io_scheduler_ops IO_SCHED_FIFO_OPS = {
     .push_request           = fifo_push_request,
     .remove_request         = fifo_remove_request,
     .requeue                = fifo_requeue,
-    .peek_request           = fifo_peek_request,
+    .peek_request           = fifo_limited_grouping_peek_request,
     .get_device_medium_pair = fifo_get_device_medium_pair,
     .retry                  = fifo_retry,
     .add_device             = fifo_add_device,
