@@ -55,6 +55,7 @@ check_SCRIPTS=acceptance.test \
               test_drive_scsi_release.test \
               test_extent_list.test \
               test_fair_share.test \
+              test_fifo_max_write_per_grouping.test \
               test_file_after_put.test \
               test_format.test \
               test_get.test \
